--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router": "^3.0.2",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.0.1"
